fixed style issues on small screens

--- a/mypage/src/app/components/contacts/contacts.component.scss
+++ b/mypage/src/app/components/contacts/contacts.component.scss
@@ -29,7 +29,7 @@
                 display: inline-block;
                 height:2px;
                 position: relative;
-                top:80px;
+                top:50px;
                 width:80px;
                 content:" ";
                 zoom:1;
@@ -41,7 +41,7 @@
                 display: inline-block;
                 height:2px;
                 position: relative;
-                top:80px;
+                top:50px;
                 width:80px;
                 content:" ";
                 zoom:1;
