--- a/mypage/src/app/components/navigation/navigation.component.scss
+++ b/mypage/src/app/components/navigation/navigation.component.scss
@@ -30,7 +30,7 @@ height:100%;
 
 }
 #chatbot{
-  bottom:0%;
+  bottom:1%;
   right:3%;
   position: fixed;
   
